# Project-Genesis

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: ANALYTICS.md  ARCHITECTURE.md  CURRENT_STATE_AUDIT.md  DEMO_GUIDE.md  EMERGENCE_DETECTION.md  EVENT_MODEL.md  OBSERVATORY.md  PHASE_21_DESIGN.md  REPRODUCIBILITY.md
scenarios/: README.md  institutional_formation.toml  market_specialization.toml  scarcity_and_cooperation.toml  technological_diffusion.toml  urban_development.toml  wealth_concentration.toml
src/civitas/: __init__.py
src/civitas/analytics/: __init__.py  compare.py  emergence.py  engine.py  metrics.py  types.py
src/civitas/api/: __init__.py  app.py  catalog.py  models.py
src/civitas/cli/: __init__.py  app.py
src/civitas/domain/: __init__.py  actions.py  agent.py  attributes.py  birth.py  cities.py  config.py  death.py  economy.py  effects.py  energy.py  events.py  families.py  food.py  geography.py  governments.py  ids.py  infrastructure.py  knowledge.py  (+27 more)
tests/: __init__.py  test_package_structure.py
tests/analytics/: test_compare.py  test_emergence.py  test_metrics.py
tests/api/: __init__.py  test_app.py
tests/cli/: __init__.py  test_app.py
tests/domain/: test_agent.py  test_attributes.py  test_birth.py  test_cities.py  test_config.py  test_death.py  test_economy.py  test_effects.py  test_energy.py  test_events.py  test_families.py  test_food.py  test_geography.py  test_governments.py  test_ids.py  test_infrastructure.py  test_innovation.py  test_institutions.py  test_knowledge.py  test_laws.py  test_location.py  test_market.py  test_memory.py  test_networks.py  test_planning.py  test_population.py  test_prices.py  test_production.py  test_reflection.py  test_relationships.py  test_reputation.py  test_research.py  test_resources.py  test_retrieval.py  test_taxes.py  test_technology.py  test_time.py  test_trading.py  test_voting.py  test_water.py  (+2 more)
tests/engine/: __init__.py  test_clock.py  test_event_bus.py  test_rng.py  test_simulation.py  test_world_factory.py
tests/llm/: test_mock.py
tests/observatory/: __init__.py  test_ui.py
tests/scenarios/: __init__.py  test_loader.py
tests/storage/: __init__.py  test_jsonl.py  test_replay.py  test_summary.py
tests/systems/: __init__.py  test_actions.py  test_birth.py  test_cities.py  test_cognition.py  test_death.py  test_economy.py  test_effects.py  test_energy.py  test_families.py  test_food.py  test_gathering.py  test_governments.py  test_infrastructure.py  test_innovation.py  test_institutions.py  test_knowledge.py  test_laws.py  test_market.py  test_movement.py  test_needs.py  test_networks.py  test_planning.py  test_policy.py  test_population.py  test_prices.py  test_production.py  test_relationships.py  test_reputation.py  test_research.py  test_retrieval.py  test_taxes.py  test_technology.py  test_trading.py  test_voting.py  test_water.py
(+61 files in other folders)
