[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "civitas-lab"
version = "0.1.0"
description = "Open-source AI research platform for studying emergent intelligence, autonomous agents, and civilization formation."
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Civitas Lab Contributors" },
]
keywords = [
    "ai-research",
    "multi-agent",
    "emergent-intelligence",
    "civilization",
    "deterministic-simulation",
    "agent-based-modeling",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.11",
    "typer>=0.16",
    "rich>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-cov>=6.0",
    "mypy>=1.16",
    "ruff>=0.12",
]

[project.scripts]
civitas = "civitas.cli.app:main"

[project.urls]
Homepage = "https://github.com/civitas-lab/civitas-lab"
Documentation = "https://github.com/civitas-lab/civitas-lab#readme"
Repository = "https://github.com/civitas-lab/civitas-lab"

[tool.hatch.build.targets.wheel]
packages = ["src/civitas"]

[tool.ruff]
target-version = "py314"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    # Pydantic models resolve field annotations at runtime; annotated
    # aliases and nested domain types must remain imported outside
    # TYPE_CHECKING blocks.
    "TC001",
]

[tool.ruff.lint.isort]
known-first-party = ["civitas"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = true
pretty = true
show_error_codes = true
packages = ["civitas"]
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
]

[tool.coverage.run]
source = ["civitas"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
